--- a/src/main/webapp/listagem.xhtml
+++ b/src/main/webapp/listagem.xhtml
@@ -77,7 +77,7 @@
 							target="#{jogoBean.jogo}" />
 					</p:commandButton>
 
-					<p:commandButton icon="pi pi-times"
+					<p:commandButton icon="pi pi-trash"
 						styleClass="rounded-button ui-button-danger ui-button-flat"
 						id="excluir" action="#{jogoBean.excluir}" update="lista">
 
