--- a/src/main/webapp/listagem.xhtml
+++ b/src/main/webapp/listagem.xhtml
@@ -67,7 +67,7 @@
 				</p:column>
 
 				<p:column headerText="Ações">
-					<p:commandButton icon="pi pi-pencil" action="edicao"
+					<p:commandButton icon="pi pi-paperclip" action="edicao"
 						styleClass="rounded-button ui-button-flat" id="editar">
 
 						<p:tooltip for="editar" value="Editar" showEffect="clip"
@@ -88,7 +88,7 @@
 							target="#{jogoBean.jogo}" />
 					</p:commandButton>
 
-					<p:commandButton icon="pi pi-sort-numeric-up-alt"
+					<p:commandButton icon="pi pi-filter"
 						styleClass="rounded-button ui-button-warning ui-button-flat"
 						id="buscarPares" action="#{jogoBean.buscarPares}" update="lista">
 
