--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -26,7 +26,7 @@
 				<p:commandButton value="Salvar" action="#{jogoBean.salvar}"
 					update="formulario" />
 
-				<p:linkButton outcome="listagem" value="Listagem" icon="pi pi-table"
+				<p:linkButton outcome="listagem" value="Listagem" icon="pi pi-align-justify"
 					style="margin-right:20px;">
 				</p:linkButton>
 
