--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,7 +23,7 @@
 				<p:inputTextarea rows="6" cols="33" value="#{jogoBean.jogo.descricao}"
 					placeholder="Nome do Jogo" />
 
-				<p:commandButton value="Salvar" action="#{jogoBean.salvar}"
+				<p:commandButton icon="pi pi-save" value="Salvar" action="#{jogoBean.salvar}"
 					update="formulario" />
 
 				<p:linkButton outcome="listagem" value="Listagem" icon="pi pi-align-justify"
