--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
 				<p:outputLabel value="Descrição " />
 				
 				<p:inputTextarea rows="6" cols="33" value="#{jogoBean.jogo.descricao}"
-					placeholder="Nome do Jogo" />
+					placeholder="Descrição do Jogo" />
 
 				<p:commandButton icon="pi pi-save" value="Salvar" action="#{jogoBean.salvar}"
 					update="formulario" />
