--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@
 			<p:autoUpdate />
 		</p:messages>
 
-		<p:panel header="Cadastre um novo Jogo">
+		<p:panel header="Novo Jogo">
 			<p:panelGrid columns="2">
 
 				<p:outputLabel value="Descrição " />
