--- a/src/main/webapp/edicao.xhtml
+++ b/src/main/webapp/edicao.xhtml
@@ -20,7 +20,7 @@
 			<p:panelGrid columns="2">
 
 				<p:outputLabel value="Descrição " />
-				<p:inputText value="#{jogoBean.jogo.descricao}"
+				<p:inputTextarea value="#{jogoBean.jogo.descricao}"
 					placeholder="Nome do Jogo" />
 
 				<p:commandButton value="Editar" action="#{jogoBean.editar}" />
