--- a/src/main/webapp/listagem.xhtml
+++ b/src/main/webapp/listagem.xhtml
@@ -5,15 +5,16 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
-<!-- item f), g), h) i) -->
+
 <h:head>
 	<title>Lista dos Jogos</title>
 </h:head>
 <h:body>
 	<h:form id="lista">
-		<p:growl id="growl" showDetail="true" />
-		<p:growl id="growl-sticky" for="sticky-key" showDetail="true"
-			sticky="true" />
+			<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+			
 
 		<p:panel header="Lista de Jogos">
 			<p:dataTable value="#{jogoBean.lista}" var="j">
